@@ -2,6 +2,7 @@ package lotto.util;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 import lotto.view.ErrorMessage;
 
 public class ParsingUtils {
@@ -16,17 +17,22 @@ public class ParsingUtils {
 
     public static List<Integer> parseStringToIntegerList(String input) {
         try {
-            return Arrays.stream(input.split(","))
-                    .map(String::trim)
-                    .map(Integer::parseInt)
-                    .toList();
+            List<String> splitStrings = splitString(input);
+            return splitStrings.stream()
+                    .map(ParsingUtils::parseStringToInteger) // `parseStringToInteger` 활용
+                    .collect(Collectors.toList());
         } catch (NumberFormatException e) {
             throw new IllegalArgumentException(ErrorMessage.LOTTO_NUMBERS_FORMAT_INVALID.getMessage());
         }
     }
 
+    private static List<String> splitString(String input) {
+        return Arrays.stream(input.split(","))
+                .map(String::trim)
+                .collect(Collectors.toList());
+    }
+
     private ParsingUtils() {
         // 인스턴스화 방지
     }
-
 }
